--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-navigation": "^7.30.6",
+    "react-native-pager-view": "6.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-tab-view": "^3.3.4",
-    "react-native-pager-view": "6.0.1"
+    "react-native-tab-view": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
